infrastructure/monitoring/grafana-ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.46.101.123.89.nip.io
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-grafana
              port:
                number: 80
